--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,15 @@
- 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
+/*Common Styles*/
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  text-decoration:none;
+  outline:none;
+  font-family:'Nunito',sans-serif;
+  font-weight:400;
+}
+html{
+  font-size: 62.5%;
+}
+/*End of Common Styles*/
