adding the translate

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,10 @@ html{
   font-size: 30rem;
   color:#a79a2d;
   position: absolute;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%)scale(0);
   text-shadow: 0.2rem 0.2rem 0.2rem #000;
+}
+.section-1-icons i.change{
+  transform: translate(-50%,-50%)scale(1);
 }
 /*End of Section 1*/
