--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,13 @@ html{
   font-size: 10rem;
   font-weight: 900;
   color: white;
+  text-align: center;
   align-items: center;
   text-transform: capitalize;
   letter-spacing: 0.5rem;
   text-shadow: 0.3rem 0.3rem 0.3rem #000;
 }
+
 /*End of Common Styles*/
 
 /*Section 1*/
