--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,14 @@ html{
   transition: transform 0.3s 0.3s;
 }
 /*End of Section 1*/
+/*Section 2*/
+.section-2{
+  width: 100%;
+  height: 100vh;
+  background-color: #222;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10rem 0;
+}
+/*End of section 2*/
