styling the cards

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ html{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10rem 0;
+  padding: 10rem 0; 
 }
 .cards-container{
   display: flex;
@@ -66,8 +66,42 @@ html{
 .card{
   width: 30rem;
   background-color: #a79a2d;
+  padding: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 1rem 1rem 1rem #000;
+}
+.card::before{
+  content: "";
+  height: 100%;
+
 }
 .card-img{
   width: 100%;
+}
+.card-name{
+  font-size: 3rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  color: #111;
+  margin: 2rem 0;
+  text-shadow: 0.15rem 0.15rem 0.15rem #000;
+}
+.card-btn{
+  width: 70%;
+  background-color: #111;
+  color: #888;
+  border-radius: 5rem;
+  font-size: 1.5rem;
+  font-weight: 800;
+  letter-spacing: 0.2rem;
+  text-transform: capitalize;
+  border: none;
+  padding: 0.5rem 0;
+  cursor: pointer;
+  box-shadow: -0.2rem -0.2rem -0.2rem #000;
 }
 /*End of section 2*/
