--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,33 @@ html{
   justify-content: space-between;
   align-items: center;
   box-shadow: 1rem 1rem 1rem #000;
+  position: relative;
+  transform: rotateY(20deg)skewX(-2deg);
 }
 .card::before{
   content: "";
   height: 100%;
+  width: 1rem;
+  background-color: #817824;
+  position: absolute;
+  top: 0;
+  left: -1rem;
+  transform: skewY(45deg);
+  transform-origin: right;
+  box-shadow: -0.1rem -0.1rem -0.1rem #000;
+   
+}
+.card::after{
+  content: "";
+  height: 1rem;
+  width: 100%;
+  background-color: #8f8317;
+  position: absolute;
+  top: -1rem;
+  left: 0;
+  transform: skewX(45deg);
+  transform-origin: bottom;
+  box-shadow: -0.1rem -0.1rem -0.1rem #000;
 
 }
 .card-img{
